不做深拷贝有并发修改异常问题，java.util.ConcurrentModificationException

--- a/gupaoedu-vip-spring-1.0/pom.xml
+++ b/gupaoedu-vip-spring-1.0/pom.xml
@@ -23,6 +23,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- requied end -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.8.5</version>
+		</dependency>
 		
 	</dependencies>
 
