--- a/gupaoedu-vip-spring-2.0/pom.xml
+++ b/gupaoedu-vip-spring-2.0/pom.xml
@@ -6,8 +6,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gupaoedu.vip</groupId>
-    <artifactId>gupaoedu-vip-spring</artifactId>
+    <artifactId>gupaoedu-vip-spring2</artifactId>
     <version>2.0</version>
+    <name>gupaoedu-vip-spring-2.0</name>
+    <packaging>war</packaging>
 
     <properties>
         <!-- dependency versions -->
@@ -41,7 +43,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.5</version>
+        </dependency>
     </dependencies>
 
 
